# DialEgg

./: .clang-format  .clang-tidy  .env  .gitignore  08-11-2025.md  CMakeLists.txt  DECOUPLED_EXTRACTION.md  IMPLEMENTATION_SUMMARY.md  README.md  build.sh  check_llvm_progress.sh  egg-opt  eq_sat.sh  log.txt  ref.md  run-egglog.sh  run_dialegg.sh  setup_dialegg.sh  test_decoupled_workflow.sh
bench/: arith_rgb_to_gray.canon+eqsat.mlir  arith_rgb_to_gray.canon.mlir  arith_rgb_to_gray.clean.mlir  arith_rgb_to_gray.csv  arith_rgb_to_gray.egg  arith_rgb_to_gray.eqsat+canon.mlir  arith_rgb_to_gray.eqsat.mlir  arith_rgb_to_gray.mlir  arith_rgb_to_gray.ops.egg  arith_rgb_to_gray_clean.mlir  bench.py  clean.sh  linalg_3mm.canon+eqsat.mlir  linalg_3mm.canon.mlir  linalg_3mm.clean.mlir  linalg_3mm.cpp.mlir  linalg_3mm.csv  linalg_3mm.eqsat+canon.mlir  linalg_3mm.eqsat.mlir  linalg_3mm.mlir  linalg_3mm.ops.egg  linalg_assoc.canon+eqsat.mlir  linalg_assoc.canon.mlir  linalg_assoc.clean.mlir  linalg_assoc.cpp.mlir  linalg_assoc.csv  linalg_assoc.egg  linalg_assoc.eqsat+canon.mlir  linalg_assoc.eqsat.mlir  linalg_assoc.mlir  linalg_assoc.ops.egg  linalg_assoc_clean.mlir  linalg_assoc_small.mlir  math_horners_method.canon+eqsat.mlir  math_horners_method.canon.mlir  math_horners_method.clean.mlir  math_horners_method.csv  math_horners_method.egg  math_horners_method.eqsat+canon.mlir  math_horners_method.eqsat.mlir  (+25 more)
build-debug/: CMakeCache.txt
circt-test/: arith_rules.egg  circt_native_demo.sh  complete_roundtrip.sh  demo.md  fir_arith_rules.egg  fir_demo.md  fir_filter.sv  fir_filter_arith.mlir  fir_filter_func.mlir  fir_filter_func.ops.egg  fir_filter_hw.mlir  fir_final_optimized.sv  fir_input.sv  fir_optimized.sv  fir_optimized_comb.mlir  fir_optimized_hw.mlir  fir_output_optimized.sv  fir_simple.mlir  fir_simple.ops.egg  fir_simple_optimized.mlir  func_to_hw_converter.py  hw_comb.egg  hw_comb_native.egg  hw_to_func_converter.py  logic_ops.mlir  logic_ops.sv  logic_ops_converted.mlir  logic_ops_func.ops.egg  logic_ops_func_full.mlir  logic_ops_func_full.ops.egg  native_hw_test.mlir  native_hw_test.ops.egg  native_success_demo.sh  run_hw_optimization.sh  simple_hw_test.egg  simple_hw_test.mlir  simple_test.mlir  simple_test.ops.egg  simplemux.mlir  simplemux.sv  (+8 more)
egg/: arith.egg  attr.egg  base.egg  builtin.egg  egg.egg  egg.ops.egg  egglog-extract.txt  egglog-log.txt  linalg.egg  math.egg  mlir.egg  op.egg  rules.egg  shape.egg  tensor.egg
mlir/: arith_addf.mlir  arith_addf.x.mlir  arith_addf_param.mlir  arith_andi.mlir  arith_negf.x.mlir  arith_tensor.mlir  classic.mlir  libify_util.sh  linalg_add.mlir  linalg_assoc.mlir  linalg_assoc.x.mlir  linalg_assoc_large.mlir  linalg_transpose.mlir  linalg_util.mlir  ops.txt  run.py  scf_if.mlir  sqrt.mlir  util.mlir
mm/: linalg_100mm.mlir  linalg_10mm.mlir  linalg_11mm.mlir  linalg_12mm.mlir  linalg_13mm.mlir  linalg_14mm.mlir  linalg_15mm.mlir  linalg_16mm.mlir  linalg_17mm.mlir  linalg_18mm.mlir  linalg_19mm.mlir  linalg_20mm.mlir  linalg_21mm.mlir  linalg_22mm.mlir  linalg_23mm.mlir  linalg_24mm.mlir  linalg_25mm.mlir  linalg_26mm.mlir  linalg_27mm.mlir  linalg_28mm.mlir  linalg_29mm.mlir  linalg_2mm.mlir  linalg_30mm.mlir  linalg_31mm.mlir  linalg_32mm.mlir  linalg_33mm.mlir  linalg_34mm.mlir  linalg_35mm.mlir  linalg_36mm.mlir  linalg_37mm.mlir  linalg_38mm.mlir  linalg_39mm.mlir  linalg_3mm.mlir  linalg_40mm.mlir  linalg_41mm.mlir  linalg_42mm.mlir  linalg_43mm.mlir  linalg_44mm.mlir  linalg_45mm.mlir  linalg_46mm.mlir  (+13 more)
reports/: 02-25-2026.md  07-31-2025.md  08-12-2025.md  10-07-2025.md  MLIR_REPLACEMENT_FIX.md  VEC_OF_REWRITE_SUPPORT.md
res/: df.csv  egg.egg  egglog-extract.txt  egglog-stderr.txt  idea.mlir  linalg-egglog-extract.txt  linalg-egglog-stderr.txt  linalg.egg  linalg.mlir  linalg_transpose.mlir  ref.md  text.txt
scripts/: attr.cpp  bench.py  egglog-math-parse.py  egglog-run.sh  linalg.cpp  line_counter.py  mlir-run.py  mlir-run.sh  mlir_run.py  mm.cpp  opt.py  plot.ipynb  tester.cpp  time.d  timer.py
src/: EggifyOnlyPass.cpp  EggifyOnlyPass.h  EggifyPass.h  Egglog.cpp  Egglog.h  EgglogCustomDefs.h  EgglogParser.h  EqSatOp.h  EqSatPass.cpp  EqSatPass.h  EqualitySaturationPass.cpp  EqualitySaturationPass.h  LowerLoopCarryProcessesPass.cpp  LowerLoopCarryProcessesPass.h  MatrixMultiplyAssociatePass.h  ReconstructFromExtractionPass.cpp  ReconstructFromExtractionPass.h  Utils.h  attr.cpp  base.egg  egg-opt.cpp  eggify.cpp  eq-sat-opt.cpp  linalg.cpp  mm.cpp  ops.cpp  random_mm.cpp  (+1 more)
(+415 files in other folders)
